# toy_scalar_spectral

./: .gitignore  CMakeLists.txt  Makefile  README.md  legendreTools.hpp  matrix.hpp  multiDomainWave.hpp  run_wave.cpp  scalarDox  scalarFunction.cpp  scalarFunction.hpp  scalarHistory.hpp  scalarWavePlots.hpp  singleDomainWave.cpp  singleDomainWave.hpp
html/: annotated.html  classDGTransmittingMultiWave-members.html  classDGTransmittingMultiWave.html  classadvection-members.html  classadvection.html  classcollTransmittingMultiWave-members.html  classcollTransmittingMultiWave.html  classes.html  classgnuplotio_1_1ArrayTraits-members.html  classgnuplotio_1_1ArrayTraits.html  classgnuplotio_1_1ArrayTraitsDefaults-members.html  classgnuplotio_1_1ArrayTraitsDefaults.html  classgnuplotio_1_1ArrayTraits_3_01T[N]_4-members.html  classgnuplotio_1_1ArrayTraits_3_01T[N]_4.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01boost_1_1enable__if_3_01boost_1_1mpl_1_1and_06179139edde1d35d5536e741bb2d063.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01boost_1_1enable__if_3_01boost_1_1mpl_1_1and_371638f7d82cde4b7a8a064d0797371a.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01boost_1_1enable__if_3_01boost_1_1mpl_1_1and_7d57179d0fc31b9402fd47294f65a18e.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01boost_1_1enable__if_3_01boost_1_1mpl_1_1and_d5bfbd58f322d0a74d370034dff1881d.html  classgnuplotio_1_1ArrayTraits_3_01T_00_01typename_01boost_1_1enable__if_3_01is__like__stl__conta18f28968091598361c077cc128ce9b3a.html  classgnuplotio_1_1Gnuplot-members.html  (+199 more)
(+45 files in other folders)
